# code-agent

./: .env  QUICKSTART.md  README.md  RUNBOOK.md  architecture.excalidraw  demo.bat  main.py  pyproject.toml  rules_engine.py  start.bat  test_display.py  test_human_input.py  test_rules_engine.py
architecture/: 01-cli-module.excalidraw  02-api-server-module.excalidraw  03-coding-agent-module.excalidraw  04-config-settings-module.excalidraw  05-tools-module.excalidraw  06-guardrails-module.excalidraw  07-core-modules.excalidraw  08-planning-module.excalidraw  09-workflows-module.excalidraw  10-memory-session-module.excalidraw  11-context-module.excalidraw  12-specialized-agents-module.excalidraw
docs/: ARCHITECTURE.md  CAPABILITIES.md  FLOWS.md  INDEX.md  OPERATORS.md  RUNBOOK.md  ai-design-patterns.html  architecture-diagram.html  architecture.html  features.html  interview-50-questions.html  nemo-guardrails-integration.html  security-guardrails-guide.html
docs/flows/: 01-request-processing-flow.html  02-memory-system-flow.html  03-tool-system-architecture.html  04-agent-orchestration-flow.html  05-llm-integration-flow.html  06-rag-context-flow.html  07-data-persistence-flow.html  index.html
guardrails_config/: config.yml  prompts.yml  rails.co
scripts/: demo.py  demo_auto.py  demo_features.py  etl_demo.py  run_demo.py  run_e2e.ps1  run_tests.ps1  test_agent.py  test_all_31_features.py  test_all_features.py  test_cli_integration.py  test_e2e.py  test_features.py  test_new_features.py  test_phase3_4.py
src/: __init__.py  cli.py  main.py
src/agents/: __init__.py  coding_agent.py  specialized.py
src/api/: __init__.py  server.py
src/config/: settings.py
src/context/: __init__.py  attachments.py
src/core/: llm.py  (+38 more)
tests/: test_guardrails.py  test_operators.py  test_tools.py
(+23 files in other folders)
