[project]
name = "code-agent"
version = "0.1.0"
description = "Agentic Development Environment - AI-powered terminal platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Agent Framework
    "agno>=1.2.6",

    # Local LLM Support
    "ollama>=0.4.0",

    # Anthropic Claude Support
    "anthropic>=0.40.0",

    # API Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "python-multipart>=0.0.12",

    # Database & Memory
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "redis>=5.2.0",
    "aiosqlite>=0.20.0",

    # Terminal & Process
    "ptyprocess>=0.7.0",
    "pexpect>=4.9.0",

    # Code Analysis
    "tree-sitter>=0.23.0",
    "pygments>=2.18.0",
    "gitpython>=3.1.0",

    # Utilities
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

# NeMo Guardrails for enhanced security (optional)
guardrails = [
    "nemoguardrails>=0.10.0",
]

# All optional dependencies
all = [
    "nemoguardrails>=0.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
